--- a/src/main/resources/templates/farmer/farmer-gather-writeform.html
+++ b/src/main/resources/templates/farmer/farmer-gather-writeform.html
@@ -26,9 +26,9 @@
     <link th:href ="@{/awesome/css/company-gather-writeform.css}" rel="stylesheet" type="text/css">
 
     <!-- ========================= Dropzone ========================= -->
-    <script th:src="@{https://unpkg.com/dropzone@5/dist/min/dropzone.min.js}"></script>
-    <link rel="stylesheet" th:href="@{https://unpkg.com/dropzone@5/dist/min/dropzone.min.css}" type="text/css" />
-    <link rel='stylesheet' th:href="@{https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css}" />
+<!--    <script th:src="@{https://unpkg.com/dropzone@5/dist/min/dropzone.min.js}"></script>-->
+<!--    <link rel="stylesheet" th:href="@{https://unpkg.com/dropzone@5/dist/min/dropzone.min.css}" type="text/css" />-->
+<!--    <link rel='stylesheet' th:href="@{https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css}" />-->
 
 </head>
 
@@ -78,6 +78,7 @@
                                 <a class="btn" href="javascript:void(0)">정회원 신청</a>
                             </div>
                     </div>
+
                 </div>
                 <!-- Start Dashboard Sidebar -->
             </div>
@@ -105,7 +106,7 @@
                                          aria-labelledby="nav-item-info-tab">
                                         <!-- Start Post Ad Step One Content -->
                                         <div class="step-one-content">
-                                            <form class="default-form-style" th:object="${auctionRequest}" method="post" th:action="@{/market/auction}">
+                                            <form class="default-form-style" th:object="${auctionRequest}" method="post" th:action="@{/market/auction}" enctype="multipart/form-data">
                                                 <div class="row">
                                                     <div class="col-12">
                                                         <div class="form-group">
@@ -215,33 +216,35 @@
                                                         </div>
                                                     </div>
 
-                                                    <div class="dropzone"></div>
+                                                    <input type="file" multiple="multiple" th:field="*{uploadImages}">
 
-                                                    <!-- 포스팅 - 이미지/동영상 farmdropzone 영역 -->
-                                                    <ul class="list-unstyled mb-0" id="dropzone-preview">
-                                                        <li class="mt-2" id="dropzone-preview-list">
-                                                            <!-- This is used as the file preview template -->
-                                                            <div class="border rounded-3">
-                                                                <div class="d-flex align-items-center p-2">
-                                                                    <div class="flex-shrink-0 me-3">
-                                                                        <div class="width-8 h-auto rounded-3">
-                                                                            <img data-dz-thumbnail="data-dz-thumbnail" class="w-full h-auto rounded-3 block" src="#" alt="Dropzone-Image" style="width: 120px;"/>
-                                                                        </div>
-                                                                    </div>
-                                                                    <div class="flex-grow-1">
-                                                                        <div class="pt-1">
-                                                                            <h6 class="font-semibold mb-1" data-dz-name="data-dz-name">&nbsp;</h6>
-                                                                            <p class="text-sm text-muted fw-normal" data-dz-size="data-dz-size"></p>
-                                                                            <strong class="error text-danger" data-dz-errormessage="data-dz-errormessage"></strong>
-                                                                        </div>
-                                                                    </div>
-                                                                    <div class="shrink-0 ms-3">
-                                                                        <button data-dz-remove="data-dz-remove" class="btn btn-sm btn-danger">Delete</button>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </li>
-                                                    </ul>
+<!--                                                    <div class="dropzone"></div>-->
+
+<!--                                                    &lt;!&ndash; 포스팅 - 이미지/동영상 farmdropzone 영역 &ndash;&gt;-->
+<!--                                                    <ul class="list-unstyled mb-0" id="dropzone-preview">-->
+<!--                                                        <li class="mt-2" id="dropzone-preview-list">-->
+<!--                                                            &lt;!&ndash; This is used as the file preview template &ndash;&gt;-->
+<!--                                                            <div class="border rounded-3">-->
+<!--                                                                <div class="d-flex align-items-center p-2">-->
+<!--                                                                    <div class="flex-shrink-0 me-3">-->
+<!--                                                                        <div class="width-8 h-auto rounded-3">-->
+<!--                                                                            <img data-dz-thumbnail="data-dz-thumbnail" class="w-full h-auto rounded-3 block" src="#" alt="Dropzone-Image" style="width: 120px;"/>-->
+<!--                                                                        </div>-->
+<!--                                                                    </div>-->
+<!--                                                                    <div class="flex-grow-1">-->
+<!--                                                                        <div class="pt-1">-->
+<!--                                                                            <h6 class="font-semibold mb-1" data-dz-name="data-dz-name">&nbsp;</h6>-->
+<!--                                                                            <p class="text-sm text-muted fw-normal" data-dz-size="data-dz-size"></p>-->
+<!--                                                                            <strong class="error text-danger" data-dz-errormessage="data-dz-errormessage"></strong>-->
+<!--                                                                        </div>-->
+<!--                                                                    </div>-->
+<!--                                                                    <div class="shrink-0 ms-3">-->
+<!--                                                                        <button data-dz-remove="data-dz-remove" class="btn btn-sm btn-danger">Delete</button>-->
+<!--                                                                    </div>-->
+<!--                                                                </div>-->
+<!--                                                            </div>-->
+<!--                                                        </li>-->
+<!--                                                    </ul>-->
 
                                                     <div class="col-12" style="margin-top: 15px">
                                                         <div class="form-group button mb-0">
@@ -283,7 +286,7 @@
 <script th:src="@{/awesome/js/glightbox.min.js}"></script>
 <script th:src="@{/awesome/js/main.js}"></script>
 
-<script th:src="@{/awesome/js/farmdropzone.js}"></script>
+<!--<script th:src="@{/awesome/js/farmdropzone.js}"></script>-->
 </body>
 
 </html>
